tests/ui/bad_bounds.stderr
error: associated-type constraints in #[decycle] impl where-clauses are only supported on `Self` or the impl's own type parameters

         = help: use `Self` or one of this `impl`'s own type parameters, such as `T`

  --> tests/ui/bad_bounds.rs:30:13
   |
30 |         (): MyTrait<'b, MyTrait = T, T = T>,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
